--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
-cmake-build-debug/
+cmake-build-*/
 
 .idea/
 
